[Cleanup] .toList and instanceof
Change-Id: Ib48432a1a3ce3598401f0979066cb0c5b32ec13a