@@ -19,7 +19,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.fordiac.ide.deployment.data.DeviceDeploymentData;
 import org.eclipse.fordiac.ide.deployment.data.ResourceDeploymentData;
@@ -44,8 +43,8 @@ public final class DeploymentCoordinator {
 
 	public static void printUnsupportedDeviceProfileMessageBox(final Device device, final Resource res) {
 		Display.getDefault().asyncExec(() -> {
-			final MessageBox messageBox = new MessageBox(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
-					SWT.ICON_ERROR | SWT.OK);
+			final MessageBox messageBox = new MessageBox(
+					PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(), SWT.ICON_ERROR | SWT.OK);
 			final String resName = (null != res) ? res.getName() : ""; //$NON-NLS-1$
 
 			if (null != device.getProfile() && !device.getProfile().isEmpty()) {
@@ -70,8 +69,8 @@ public final class DeploymentCoordinator {
 	 */
 	public static void performDeployment(final Object[] selection,
 			final IDeviceManagementCommunicationHandler overrideDevMgmCommHandler, final String profile) {
-		final IDeploymentListener outputView = (IDeploymentListener) PlatformUI.getWorkbench().getActiveWorkbenchWindow()
-				.getActivePage().findView(OUTPUT_VIEW_ID);
+		final IDeploymentListener outputView = (IDeploymentListener) PlatformUI.getWorkbench()
+				.getActiveWorkbenchWindow().getActivePage().findView(OUTPUT_VIEW_ID);
 		final Shell shell = Display.getDefault().getActiveShell();
 		try {
 			final DownloadRunnable download = new DownloadRunnable(createDeploymentdata(selection),
@@ -80,7 +79,7 @@ public final class DeploymentCoordinator {
 		} catch (final DeploymentException | InvocationTargetException ex) {
 			MessageDialog.openError(shell, Messages.DeploymentCoordinator_DepoymentError, ex.getMessage());
 		} catch (final InterruptedException ex) {
-			Thread.currentThread().interrupt();  // mark interruption
+			Thread.currentThread().interrupt(); // mark interruption
 			MessageDialog.openInformation(shell, Messages.DeploymentCoordinator_LABEL_DownloadAborted, ex.getMessage());
 		}
 	}
@@ -95,7 +94,8 @@ public final class DeploymentCoordinator {
 	 * @param executor the executor
 	 */
 	public static void enableOutput(final IDeviceManagementInteractor interactor) {
-		final IViewPart view = PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage().findView(OUTPUT_VIEW_ID);
+		final IViewPart view = PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage()
+				.findView(OUTPUT_VIEW_ID);
 		if (null != view) {
 			interactor.addDeploymentListener((IDeploymentListener) view);
 		}
@@ -107,7 +107,8 @@ public final class DeploymentCoordinator {
 	 * @param executor the executor
 	 */
 	public static void disableOutput(final IDeviceManagementInteractor interactor) {
-		final IViewPart view = PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage().findView(OUTPUT_VIEW_ID);
+		final IViewPart view = PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage()
+				.findView(OUTPUT_VIEW_ID);
 		if (null != view) {
 			interactor.removeDeploymentListener((IDeploymentListener) view);
 		}
@@ -116,16 +117,13 @@ public final class DeploymentCoordinator {
 	public static List<DeviceDeploymentData> createDeploymentdata(final Object[] selection) throws DeploymentException {
 		final List<DeviceDeploymentData> data = new ArrayList<>();
 		for (final Object object : selection) {
-			if (object instanceof Resource) {
-				final Resource res = (Resource) object;
-				final DeviceDeploymentData devData = getDevData(data, res.getDevice());
-				devData.addResourceData(new ResourceDeploymentData(res));
-			} else if (object instanceof Device) {
-				final Device dev = (Device) object;
-				final DeviceDeploymentData devData = getDevData(data, dev);
-				devData.setSeltectedDevParams(dev.getVarDeclarations().stream()
-						.filter(devVar -> !DeploymentHelper.MGR_ID.equalsIgnoreCase(devVar.getName()))
-						.collect(Collectors.toList()));
+			if (object instanceof final Resource resource) {
+				final DeviceDeploymentData devData = getDevData(data, resource.getDevice());
+				devData.addResourceData(new ResourceDeploymentData(resource));
+			} else if (object instanceof final Device device) {
+				final DeviceDeploymentData devData = getDevData(data, device);
+				devData.setSeltectedDevParams(device.getVarDeclarations().stream()
+						.filter(devVar -> !DeploymentHelper.MGR_ID.equalsIgnoreCase(devVar.getName())).toList());
 			}
 		}
 		return data;
